--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/crud
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+cors: allowed
